.tempCodeRunnerFile.txt



1/14/2020, 9:28:59 AM
Example.java:23: error: ';' expected
      System.out.println("All numbers are different")
                                                     ^
1 error
Error: Could not find or load main class Example
